# libfoundation

./: .clang-format  .gitignore  CMakeLists.txt  compile.zsh  run-benchmarks.sh  vcpkg.json
assets/rbtree/: node1.json  tree2-left.json  tree2-right.json  tree3.json
doc/: Doxyfile
libfoundation/: CMakeLists.txt
libfoundation/core/: assertions.hpp  io.cpp  io.hpp
libfoundation/heaps/: heaps.hpp  heaps.tests.cpp  tests.cpp
libfoundation/rbtree/: rbtree.hpp  rbtree.tests.cpp
libfoundation/sorting/: benchmarks.cpp  sorting.benchmarks.cpp  sorting.hpp  sorting.tests.cpp  tests.cpp
scripts/: activate.sh  dev.py  foundry.py
scripts/osx/: clean.zsh  compile-debug.zsh  compile-release.zsh  compile.zsh  run-benchmarks-release.sh  run-tests-release.zsh  run-tests.zsh
